Add small changes
I18N
Add question display of buttons + / -

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,10 +1,10 @@
 ####
 # Naming pattern: <PageName>.<loggedInState>.<messageDescriptor>
-#### TODO ÜÖÄ am ende ersetzen
+####
 global.notLoggedIn.info=Dieser Inhalt ist nur f&uuml;r angemeldete User sichtbar. Bitte loggen Sie sich ein.
 global.notRegisteredYet=Wenn Sie sich noch nicht registriert haben, klicken Sie bitte
 global.alreadyRegistered=Wenn Sie sich bereits registriert haben, klicken Sie bitte
-global.homeLink=Wenn Sie zur Startseite möchten, klicken Sie bitte
+global.homeLink=Wenn Sie zur Startseite m&ouml;chten, klicken Sie bitte
 global.clickHereLink=hier
 home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier k&ouml;nnen Sie sich f&uuml;r Seminare einschreiben, Tests absolvieren und Ihre pers&ouml;nliche Creditpoints-&Uuml;bersicht anzeigen.
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
@@ -12,25 +12,19 @@ home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wi
 home.loggedIn.emptyListStudent=Momentan sind Sie f&uuml;r kein Seminar angemeldet, schreiben Sie sich zun&auml;chst in einem Seminar ein.
 home.loggedIn.emptyListLecturer=Momentan sind Sie f&uuml;r kein Seminar eingetragen, legen Sie zun&auml;chst ein Seminar an.
 home.loggedIn.testInfoLecturer=Von hier gelangen Sie &uuml;ber die Buttons zu allen Seiten, die zum Verwalten von Tests und Seminaren gebraucht werden.
-home.StartTestButton=starte Test
-home.add-testButton=Test hinzuf&uuml;gen
-home.EditTestButton=Test bearbeiten
 home.loggedIn.infoLecturer=Hier sehen Sie eine Auflistung aller Seminare, f&uuml;r die Sie Dozent sind.
 home.tableHeaderName=Seminar-Name
 home.tableHeaderDate=Startdatum - Enddatum
 home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
-home.testAbsolved=Test bereits absolviert
 home.noTest=Kein Test verf&uuml;gbar
 home.testNoQuestion=Ein Fehler ist aufgetreten. Bitte kontaktieren Sie ihren Dozenten.
-home.seminarFinished=Seminar ist bereits beendet
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
 editTest.addQuestionButton=Frage hinzuf&uuml;gen
 editTest.TableHeaderPos= Position der Frage im Test
 editTest.TableHeaderText=Frage
 editTest.TableHeaderEdit=Frage verwalten
-editTest.EditQuestionButton=Frage bearbeiten
 editTest.info=Die Fragen zum Test hinzuf&uuml;gen:
 editTest.emptyQuestionList=Bitte dr&uuml;cken Sie den Button, um die erste Frage zum Test hinzuzuf&uuml;gen
 editTest.startedEmpty=Der Testzeitraum hat begonnen, Sie k&ouml;nnen keine Frage mehr hinzuf&uuml;gen
@@ -82,7 +76,6 @@ addQuestion.infoTextGap=Es werden automatisch entsprechend der L&uuml;cken ([...
 frameHeader.systemName=Pr&uuml;fungssystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Seminar ausw&auml;hlen
-frameHeader.linkTestAdministration=Test Verwalten
 frameHeader.linkResults=Ergebnisse
 frameHeader.linkCreateSeminar=Seminar Erstellen
 frameHeader.linkLogin=Login
@@ -133,11 +126,8 @@ logout.seeyou= Bis bald!
 logout.title=Loqout
 registration.Step1=Herzlichen Gl&uuml;ckwunsch! Sie haben den ersten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
 registration.email=Wir haben Ihnen einen Link zugeschickt. &Ouml;ffnen Sie diesen bitte, um die Registrierung abzuschlie&szlig;en.
-question.single=Einfache Wahl
-question.multiple=Mehrfachwahl
-question.cloze=L&uuml;ckentext
 questionFieldError.points=Bitte geben Sie eine Punktzahl >0 an
-questionFieldError.texts=Bitte geben Sie einen Text ein
+questionFieldError.texts=Ihre Frage ist zu kurz
 questionFieldError.answers=Bitte geben Sie Text der Antworten an
 questionFieldError.gapAnswers=Bitte w&auml;hlen Sie mindestens eine L&uuml;cke
 questionFieldError.correctAnswers=Bitte w&auml;hlen Sie eine korrekte Antwort
@@ -170,7 +160,7 @@ registrationMail.textGreeting=<p>Mit freundlichen Gr&uuml;&szlig;en,</p>
 registrationMail.textSignature= <p>Ihr Nordakademie Seminartool</p>
 tokenMail.opening=Lieber
 tokenMail.token=<p>Bitte entnehme deinen pers&ouml;nlichen Token zum &Ouml;ffnen des Tests unten.</p>
-tokenMail.tokenTest=Dein pers&oouml;nlicher Token f&uuml;r den Test in
+tokenMail.tokenTest=Dein pers&ouml;nlicher Token f&uuml;r den Test in
 registrationFieldError.firstName=Bitte geben Sie Ihren Vornamen an
 registrationFieldError.lastName=Bitte geben Sie Ihren Nachnamen an
 registrationFieldError.mail=Bitte geben Sie Ihre Mailadresse an
@@ -209,15 +199,17 @@ seminarList.lecturer=Dozent
 seminarList.participants=Teiln.
 seminarList.title=Seminar Liste
 performTest.title=Test durchf&uuml;hruen
+performTest.postpone=Frage verschieben
+performTest.submit=Test abgeben
 registration.title=Registrierung
 registration.error=Leider ist bei der Registrierung ein Fehler aufgetreten.
-registration.tryAgain=Bitte versuchen Sie es erneut.
 registration.successMessage=Herzlichen Gl&uuml;ckwunsch! Sie haben den letzten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
 registration.loginReady=Sie k&ouml;nnen sich jetzt anmelden und den vollen Umfang der Seminare genie&szlig;en.
-registration.identificationError=Leider konnten wir Sie nicht eindeutig identifizieren.
-registration.tryLink=Bitte kopieren Sie den Ihnen zugeschickten Link in den Browser und versuchen Sie es erneut.
 evaluationType.fatal=0 Punkte f&uuml;r Fragen mit falscher Antwort
 evaluationType.substract=Verliere einen Punkt f&uuml;r falsche Antworten
 testresult.info=Ihr Testergebnis:
 testresult.points=Punkte
-applicationAdministration.alreadyRun.infoText=Bitte löschen Sie Ihre Datenbank, bevor Sie neue Testdaten anlegen.
+applicationAdministration.alreadyRun.infoText=Bitte l&ouml;schen Sie Ihre Datenbank, bevor Sie neue Testdaten anlegen.
+startTest.title=Starte Test
+startTest.accessToken=Access-Token:
+testSubmitted.title=Test abgegeben
