--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -11,9 +11,6 @@ home.loggedIn.infoStudent=You can find a list of all Seminars for which you are 
 home.loggedIn.testInfoStudent=As soon as a Lecturer activates a test for a seminar you can start the test by pressing the appearing button.
 home.loggedIn.emptyListStudent=You aren't registrated for a seminar at this moment, please enroll in a seminar first.
 home.loggedIn.emptyListLecturer=You aren't listed for a seminar, please create one seminar first.
-home.StartTestButton=start test
-home.add-testButton=add test
-home.EditTestButton=edit test
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
 home.loggedIn.testInfoLecturer=You are able to access every page you need for administrating your tests and seminars.
 home.tableHeaderName=name of seminar
@@ -21,15 +18,12 @@ home.tableHeaderDate=start date - end date
 home.startTest= start test
 home.AdministrateTest= administrate test
 home.noTest=No test available
-home.testAbsolved=Test already absolved
 home.testNoQuestion=An Error occured. Please contact the lecturer.
-home.seminarFinished=Seminar has already finished
 add-test.title=Create a Test
 edit-test.title=Edit a Test
 editTest.addQuestionButton=add question
 editTest.info=the test question could be add here.
 editTest.TableHeaderEdit=administrate question
-editTest.EditQuestionButton=edit question
 editTest.TableHeaderPos= question position
 editTest.TableHeaderText=question
 editTest.emptyQuestionList=Please press the button to add the first question to the test
@@ -82,7 +76,6 @@ editQuestion.info=On this page you can edit a question and its answer possibilit
 frameHeader.systemName=Examinationsystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Choose Seminar
-frameHeader.linkTestAdministration=Test Administration
 frameHeader.linkResults=Results
 frameHeader.linkCreateSeminar=Create Seminar
 frameHeader.linkLogin=Login
@@ -133,11 +126,8 @@ logout.seeyou= See you soon!
 logout.title=Loqout
 registration.Step1=Congratulations! You finished the first step of registration
 registration.email=We have sent you an email. Please open the link to confirm your registration.
-question.single=Single Choice
-question.multiple=Multiple Choice
-question.cloze=Cloze Text
 questionFieldError.points=Please choose an amount of points >0
-questionFieldError.texts=Please enter a question text
+questionFieldError.texts=The question is too short
 questionFieldError.answers=Please add a text to your answers
 questionFieldError.gapAnswers=Please add at least one gap
 questionFieldError.correctAnswers=Please choose a correct answer
@@ -209,15 +199,17 @@ seminarList.lecturer=Lecturer
 seminarList.participants=Part.
 seminarList.title=Seminar list
 performTest.title=Perform test
+performTest.postpone=Postpone question
+performTest.submit=Submit test
 registration.title=Registration
 registration.error=An error occured during registration.
-registration.tryAgain=Please try again.
 registration.successMessage=Congratulations! You finished the last step of registration for the seminar management tool of the Nordakademie!
 registration.loginReady=You are now able to login and enjoy the extent of our seminars.
-registration.identificationError=Unfortunately, we coulnd't identify you correctly.
-registration.tryLink=Please copy the link you received in the browser and try again.
 evaluationType.fatal=Get total 0 points for single wrong answer
 evaluationType.substract=Loose points on wrong answer
-testresult.info=Your Testresult:
+testresult.info=Your testresult:
 testresult.points=Points
 applicationAdministration.alreadyRun.infoText=Please delete your DB before creating new test data.
+startTest.title=Start test
+startTest.accessToken=Access-Token:
+testSubmitted.title=Test submitted
