implement seminarlist sort and improvements in seminar list design on home-page

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -14,7 +14,8 @@ home.loggedIn.emptyListLecturer=Momentan sind Sie f&uuml;r kein Seminar eingetra
 home.loggedIn.testInfoLecturer=Von hier gelangen Sie &uuml;ber die Buttons zu allen Seiten, die zum Verwalten von Tests und Seminaren gebraucht werden.
 home.loggedIn.infoLecturer=Hier sehen Sie eine Auflistung aller Seminare, f&uuml;r die Sie Dozent sind.
 home.tableHeaderName=Seminar-Name
-home.tableHeaderDate=Startdatum - Enddatum
+home.tableHeaderSeminarDate=Seminar-Zeitraum
+home.tableHeaderTestDate=Test-Zeitraum
 home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
 home.noTest=Kein Test verf&uuml;gbar
