--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,10 +13,11 @@ home.loggedIn.emptyListStudent=You aren't registrated for a seminar at this mome
 home.loggedIn.emptyListLecturer=You aren't listed for a seminar, please create one seminar first.
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
 home.loggedIn.testInfoLecturer=You are able to access every page you need for administrating your tests and seminars.
-home.tableHeaderName=name of seminar
-home.tableHeaderDate=start date - end date
-home.startTest= start test
-home.AdministrateTest= administrate test
+home.tableHeaderName=Name of seminar
+home.tableHeaderSeminarDate=Seminar time period
+home.tableHeaderTestDate=Test time period
+home.startTest= Start test
+home.AdministrateTest= Administrate test
 home.noTest=No test available
 home.testNoQuestion=An Error occured. Please contact the lecturer.
 add-test.title=Create a Test
