add some explanation texts and comments

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -200,7 +200,7 @@ seminarList.lecturer=Dozent
 seminarList.participants=Teiln.
 seminarList.title=Seminar Liste
 performTest.title=Test durchf&uuml;hruen
-performTest.postpone=Frage verschieben
+performTest.postpone=Frage zur&uuml;ckstellen
 performTest.submit=Test abgeben
 registration.title=Registrierung
 registration.error=Leider ist bei der Registrierung ein Fehler aufgetreten.
@@ -213,4 +213,14 @@ testresult.points=Punkte
 applicationAdministration.alreadyRun.infoText=Bitte l&ouml;schen Sie Ihre Datenbank, bevor Sie neue Testdaten anlegen.
 startTest.title=Starte Test
 startTest.accessToken=Access-Token:
+startTest.startTestButton=Test Starten
+startTest.accessTokenInfo=Bitte gebe Sie Ihren Access-Token ein, der Ihnen zuvor per E-Mail zugeschickt wurde.
+startTest.description=Nachdem Sie auf den Test-Starten-Button geklickt haben, startet der Test automatisch.
+startTest.timeLapse=Sollte die Zeit abgelaufen sein, bevor Sie den Test abgeschickt haben, wird dieser automatisch, mit den bis zu diesem Zeitpunkt eingegebenen Antworten, abgeschickt.
+startTest.QuestionTypes=Es gibt drei verschiedene Arten von Fragen:
+startTest.QuestionTypeSingle=-Bei Single-Questions ist nur ein Antowrt richtig. Daher kann auch nur eine Antwort ausgew&aumlhlt werden.
+startTest.QuestionTypeMultiple=-Bei Multiple-Questions ist mindestens eine Antowrt richtig. Es k&oumlnenn daher auch mehrer Antowrt ausgew&aumlhlt werden.
+startTest.QuestionTypeGap=-Bei einer L&uumlckentext-Frage gibt es so viele Antwortm&oumlglichkeiten, wie L&uumlcken (gekkenzeichnet durch "[...]") im Text vorhanden sind.
+startTest.postponeButton=&Uumlber den Button "Zur&uumlckstellen" kann eine Frage an das Ende des Tests zur&uumlckgestellt werden.
+startTest.note=Bitte beachten Sie:
 testSubmitted.title=Test abgegeben
