--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -176,7 +176,7 @@ question.answer=Answer
 applicationAdministration.title=Application administration
 applicationAdministration.quantLecturer=Number of Lecturers
 applicationAdministration.quantStudent=Number of Students
-applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: Vorname-Nachname@nordakademie.de, Passwort: genExamplePW. Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt. Vor- und Nachnamen entnehmen Sie bitte der Datenbank.
+applicationAdministration.infoText=Afterwards you can log-in to the system with: firstname-lastname@nordakademie.de, Password: genExamplePW. All data will be created with a random process. Thus, it is neccessary to look up the data in the database.
 applicationAdministration.quantSeminar=Number of Seminars
 home.title=Home
 seminarDetail.title=Seminar details
@@ -213,4 +213,14 @@ testresult.points=Points
 applicationAdministration.alreadyRun.infoText=Please delete your DB before creating new test data.
 startTest.title=Start test
 startTest.accessToken=Access-Token:
+startTest.startTestButton=Start test
+startTest.accessTokenInfo=Please enter the access-token which has been sent to you by mail.
+startTest.description=After clicking the start-test-button the test will start automatically.
+startTest.timeLapse=If the time passes before you have submitted the test, the test will be automatically submitted with all answers you have entered so far.
+startTest.QuestionTypes=There are three types of questions:
+startTest.QuestionTypeSingle=-Single-choice questions have one correct answer. Thus, you can only choose one answer.
+startTest.QuestionTypeMultiple=-Multiple-choice questions have at least one correct answer. Thus, you can choose more than one answer.
+startTest.QuestionTypeGap=-Gap questions have the same number of answers as there are gaps (marked as "[...]") in the gap-text.
+startTest.postponeButton=By clicking the "postpone"-button you can postpone a question to the end of the test.
+startTest.note=Pleas note:
 testSubmitted.title=Test submitted
